objects/Gabarito_de_Execucao__c.object
<CustomObject>
    <fields>
        <fullName>A_casa_tem_tailor_made__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Se a casa tiver tailor made, favor indique a marca ao lado.</inlineHelpText>
        <label>A casa tem tailor made?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acondicionamento_de_produto_correto__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Todos os produtos que não estiverem exposto na prateleira devem ser armazenados em locais frescos, secos e ao abrigo do sol e da luz. 
No caso dos vinhos além das recomendações acima deve ser mantida na posição horizontal.</inlineHelpText>
        <label>Acondicionamento de produto correto?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brigada_recebeu_treinamento_sobre_marca__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brigada foi treinada neste mês?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cardapio_executado_de_forma_correta__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Um cardápio executado de forma correta deve ter os itens abaixo, seguindo o foco de cada marca de acordo com o guia de execução: 
- Posicionamento de nossas logomarcas junto ao título de cada categoria 
- Principais categorias iniciando com produtos PR</inlineHelpText>
        <label>Cardápio executado de forma correta?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist_de_Visita__c</fullName>
        <label>Checklist de Visita</label>
        <referenceTo>Checklist_de_visita__c</referenceTo>
        <relationshipLabel>Gabaritos de Execução</relationshipLabel>
        <relationshipName>Gabaritos_de_Execucao</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comentarios_gerais__c</fullName>
        <label>Comentários gerais</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Embalagens_garrafas_em_perfeito_estado__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Todos os produtos disponíveis na casa devem estar limpos e com os rótulos em perfeito estado, sem estar arranhados ou sem rótulo.</inlineHelpText>
        <label>Embalagens/garrafas em perfeito estado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foi_impactado_quando_entrou_na_casa__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Foi impactado por nossas marcas, de alguma forma, assim que entrou na casa?</inlineHelpText>
        <label>Foi impactado quando entrou na casa?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequencia_1_unica_vez__c</fullName>
        <label>Qual marca?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Realizada_promocao_de_marcas_na_casa__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABSOLUT</fullName>
                </value>
                <value>
                    <fullName>BALLANTINES</fullName>
                </value>
                <value>
                    <fullName>CHIVAS</fullName>
                </value>
                <value>
                    <fullName>JAMESON</fullName>
                </value>
                <value>
                    <fullName>MONTILLA</fullName>
                </value>
                <value>
                    <fullName>NATU</fullName>
                </value>
                <value>
                    <fullName>ORLOFF</fullName>
                </value>
                <value>
                    <fullName>PASSPORT</fullName>
                </value>
                <value>
                    <fullName>PERRIER</fullName>
                </value>
                <value>
                    <fullName>TEACHERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequencia_De_1_a_5_vezes__c</fullName>
        <label>Frequência - De 1 a 5 vezes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequencia_De_6_a_10_vezes__c</fullName>
        <label>Frequência - De 6 a 10 vezes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequencia_Mais_de_1_vez_por_mes__c</fullName>
        <label>Frequência - Mais de 1 vez por mês</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequencia_Mensalmente__c</fullName>
        <label>Frequência - Mensalmente</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ha_produtos_c_precos_fora_da_politica__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Existem produtos cujo preços não estão de acordo com a politica recomendada?</inlineHelpText>
        <label>Há produtos c/preços fora da política?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ha_produtos_c_sort_min_nao_encontrado__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Existem produtos cujo sortimento mínimo não foi encontrado na casa?</inlineHelpText>
        <label>Há produtos do sort. mín não encontrado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ritual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Backbar__c</fullName>
        <label>Backbar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Glorifier</fullName>
                </value>
                <value>
                    <fullName>Garrafão</fullName>
                </value>
                <value>
                    <fullName>Paredão</fullName>
                </value>
                <value>
                    <fullName>Barmat</fullName>
                </value>
                <value>
                    <fullName>Luminoso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Brigade_Persuasion__c</fullName>
        <label>Brigade Persuasion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incentivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Brigade__c</fullName>
        <label>Brigade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Uniforme (Avental, Camiseta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Cabin__c</fullName>
        <label>Cabin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobiliário</fullName>
                </value>
                <value>
                    <fullName>Almofada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_CardapioRating__c</fullName>
        <formula>IF( TEXT( LAT_BR_GDE_Products_Listed_on_Menues__c ) = &apos;Sim&apos; , 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAT_BR_GDE_CardapioRating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Embassy__c</fullName>
        <formula>IF( TEXT(Checklist_de_Visita__r.Visita__r.Conta__r.Segmentation_Type_on_trade__c) = &apos;Bar Agitado&apos;,
    IF( TEXT(LAT_BR_GDE_Products_Listed_on_Menues__c) = &apos;Sim&apos;
        &amp;&amp; LAT_BR_GDE_Visibility__c = 5
        &amp;&amp; LAT_BR_GDE_Persuation__c = 2 ,1,0)
,
    IF( TEXT(LAT_BR_GDE_Products_Listed_on_Menues__c) = &apos;Sim&apos;
        &amp;&amp; LAT_BR_GDE_Visibility__c = 4
        &amp;&amp; LAT_BR_GDE_Persuation__c = 2 ,1,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Embassy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_General_Enviroment__c</fullName>
        <label>General Enviroment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Luminoso</fullName>
                </value>
                <value>
                    <fullName>Outro Material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Menu__c</fullName>
        <formula>IF( TEXT(LAT_BR_GDE_Products_Listed_on_Menues__c) = &apos;Sim&apos; , 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Menu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Not_Listed_Brands__c</fullName>
        <label>Not Listed Brands</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABSOLUT</fullName>
                </value>
                <value>
                    <fullName>ELYX</fullName>
                </value>
                <value>
                    <fullName>CHIVAS</fullName>
                </value>
                <value>
                    <fullName>JAMESON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_PersuationRating__c</fullName>
        <formula>IF( TEXT( LAT_BR_GDE_Brigade_Persuasion__c ) != &apos;&apos; , 1, 0 ) + 
IF( TEXT( LAT_BR_GDE_Action__c ) != &apos;&apos; , 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAT_BR_GDE_PersuationRating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Persuation__c</fullName>
        <formula>IF ( TEXT(LAT_BR_GDE_Brigade_Persuasion__c) != &apos;&apos; ,1,0 ) +
IF ( TEXT(LAT_BR_GDE_Action__c ) != &apos;&apos; ,1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Persuation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Products_Listed_on_Menues__c</fullName>
        <description>Responder &quot;Sim&quot; se Absolut, Chivas, Elyx ou Jameson estão listados no cardápio. Caso contrário responder &quot;Não&quot; e informar os produtos no campo &quot;Qual marca não está listada?&quot;</description>
        <inlineHelpText>Responder &quot;Sim&quot; se Absolut, Chivas, Elyx ou Jameson estão listados no cardápio. Caso contrário responder &quot;Não&quot; e informar os produtos no campo &quot;Qual marca não está listada?&quot;</inlineHelpText>
        <label>Products Listed on Menues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Stage_DJBooth__c</fullName>
        <label>Stage / DJ Booth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Luminoso</fullName>
                </value>
                <value>
                    <fullName>Garrafão</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Table__c</fullName>
        <label>Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Table Tent</fullName>
                </value>
                <value>
                    <fullName>Porta-Guardanapo</fullName>
                </value>
                <value>
                    <fullName>Balde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_GDE_Visibility__c</fullName>
        <formula>IF( TEXT(LAT_BR_GDE_General_Enviroment__c) != &apos;&apos; , 1, 0 ) +
IF( TEXT(LAT_BR_GDE_Backbar__c) != &apos;&apos; , 1, 0 ) +
IF( TEXT(LAT_BR_GDE_Stage_DJBooth__c) != &apos;&apos; , 1, 0 ) +
IF( TEXT(LAT_BR_GDE_Table__c) != &apos;&apos; , 1, 0 ) +
IF( TEXT(LAT_BR_GDE_Brigade__c) != &apos;&apos; , 1, 0 ) +
IF( TEXT(LAT_BR_GDE_Cabin__c) != &apos;&apos; , 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marca_trabalhada_em_entretenimento__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>São consideradas áreas de entretenimento: 
- Mesa de DJ 
- Palco 
- Camarote</inlineHelpText>
        <label>Marca trabalhada em entretenimento?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marcas_Precos__c</fullName>
        <label>Qual marca?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Ha_produtos_c_precos_fora_da_politica__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marcas_Sortimento_minimo__c</fullName>
        <label>Qual marca?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Ha_produtos_c_sort_min_nao_encontrado__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marcas_sem_comunicacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marcas sem comunicação atualizada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prateleira_com_exposi_o_correta__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>As prateleiras devem estar expostas com os produtos foco em cada região de acordo com o tipo e o segmento da casa, respeitando a quantidade de garrafas indicadas para cada produto.</inlineHelpText>
        <label>Prateleira com exposição correta?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Produtos_s_o_servidos_c_seus_materiais__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Os produtos que tiverem materiais funcionais (balde de gelo, copos, canudos, etc) disponíveis devem ser servidos ao consumidor com os mesmos.</inlineHelpText>
        <label>Produtos são servidos c/ seus materiais?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo_o_executada_conforme_mec_nica__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A brigada assimilou a mecânica da ação e trabalhou para que a ação funcionasse da melhor forma? Ou a promotora trabalhou de acordo com a mecânica definida?</inlineHelpText>
        <label>Promoção executada conforme mecânica?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qual_marca__c</fullName>
        <label>Qual marca?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>A_casa_tem_tailor_made__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qual_marca_comunicacao__c</fullName>
        <label>Qual marca?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Marcas_sem_comunicacao__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Realizada_promocao_de_marcas_na_casa__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Já foi realizada alguma promoção de nossas marcas na casa? Se a casa já teve alguma promoção, indique as marcas a e sua frequência nas listas abaixo.</inlineHelpText>
        <label>Realizada promoção de marcas na casa?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tem_comunica_o_na_rea_de_pedido__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>São consideradas áreas de pedido: 
- Mesa 
- Balcão</inlineHelpText>
        <label>Tem comunicação na área de pedido?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treinamento_brigada_Marcas__c</fullName>
        <label>Qual marca?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Brigada_recebeu_treinamento_sobre_marca__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine´s</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Teacher´s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Gabarito de Execução</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GE{0000000}</displayFormat>
        <label>Nome do Gabarito de Execução</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gabaritos de Execução</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_BR_GDE_On_Trade</fullName>
        <active>true</active>
        <label>LAT_BR On Trade</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_BR_CheckListedBrands</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(LAT_BR_GDE_Products_Listed_on_Menues__c) == &apos;Não&apos; 
&amp;&amp;
ISBLANK(LAT_BR_GDE_Not_Listed_Brands__c)</errorConditionFormula>
        <errorDisplayField>LAT_BR_GDE_Not_Listed_Brands__c</errorDisplayField>
        <errorMessage>Please inform which brands were not listed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Obriga_casa_tem_tailor_made_se_tem_marca</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(A_casa_tem_tailor_made__c) ,  NOT( ISBLANK( Qual_marca__c )) )</errorConditionFormula>
        <errorDisplayField>A_casa_tem_tailor_made__c</errorDisplayField>
        <errorMessage>Quando selecionada uma marca, obrigatório informar que a casa possui Tailor Made.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Obriga_comunica_atualizada_se_tem_marca</fullName>
        <active>true</active>
        <errorConditionFormula>AND(   NOT(Marcas_sem_comunicacao__c ),   NOT(ISBLANK(    Qual_marca_comunicacao__c ) ))</errorConditionFormula>
        <errorDisplayField>Marcas_sem_comunicacao__c</errorDisplayField>
        <errorMessage>Quando selecionada uma marca, obrigatório informar que existem marcas sem comunicação atualizada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Obriga_marca_casa_tem_tailor_made</fullName>
        <active>true</active>
        <errorConditionFormula>AND( A_casa_tem_tailor_made__c ,   ISBLANK( Qual_marca__c ) )</errorConditionFormula>
        <errorDisplayField>Qual_marca__c</errorDisplayField>
        <errorMessage>Informar ao menos uma marca.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Obriga_sortime_marca_comunica_atualizada</fullName>
        <active>true</active>
        <errorConditionFormula>AND(   Marcas_sem_comunicacao__c ,   ISBLANK(    Qual_marca_comunicacao__c ) )</errorConditionFormula>
        <errorDisplayField>Qual_marca_comunicacao__c</errorDisplayField>
        <errorMessage>Informar ao menos uma marca.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_periodo_frequencia_1_a_5</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Absolut&quot;),
          INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Absolut&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Ballantine´s&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Ballantine´s&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Chivas&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Chivas&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Jameson&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Jameson&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Montilla&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Montilla&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Natu Nobilis&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Natu Nobilis&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Orloff&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Orloff&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Passport&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Passport&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Perrier-Jouët&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Perrier-Jouët&quot;)
          ),
AND(
          INCLUDES(Frequencia_1_unica_vez__c  , &quot;Teacher´s&quot;),
          INCLUDES(Frequencia_De_1_a_5_vezes__c , &quot;Teacher´s&quot;)
          )
)</errorConditionFormula>
        <errorDisplayField>Frequencia_De_1_a_5_vezes__c</errorDisplayField>
        <errorMessage>Marca informada na frequência anterior.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_periodo_frequencia_6_a_10</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 AND(
          INCLUDES( Frequencia_De_6_a_10_vezes__c , &quot;Absolut&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Absolut&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Absolut&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c   , &quot;Ballantine´s&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Ballantine´s&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Ballantine´s&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c , &quot;Chivas&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Chivas&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Chivas&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c , &quot;Jameson&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Jameson&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Jameson&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c , &quot;Montilla&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Montilla&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Montilla&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c , &quot;Natu Nobilis&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Natu Nobilis&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Natu Nobilis&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c , &quot;Orloff&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Orloff&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Orloff&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c , &quot;Passport&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Passport&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Passport&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c , &quot;Perrier-Jouët&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Perrier-Jouët&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Perrier-Jouët&quot;)
           )),
AND(
          INCLUDES(Frequencia_De_6_a_10_vezes__c , &quot;Teacher´s&quot;),
          OR(INCLUDES( Frequencia_1_unica_vez__c  , &quot;Teacher´s&quot;),
                 INCLUDES( Frequencia_De_1_a_5_vezes__c , &quot;Teacher´s&quot;)
           ))
)</errorConditionFormula>
        <errorDisplayField>Frequencia_De_6_a_10_vezes__c</errorDisplayField>
        <errorMessage>Marca informada na frequência anterior.</errorMessage>
    </validationRules>
</CustomObject>